// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collection component Serialization Saving: Collection with grandchildren 1`] = `
{
  "attributes": {
    "id": "cmp-coll",
  },
  "components": [
    {
      "attributes": {
        "id": "cmp-coll-item",
      },
      "components": [
        {
          "attributes": {
            "attribute_trait": {
              "collectionId": "my_collection",
              "path": "user",
              "type": "data-variable",
              "variableType": "currentItem",
            },
            "id": "cmp-coll-item-child-1",
            "name": {
              "collectionId": "my_collection",
              "path": "user",
              "type": "data-variable",
              "variableType": "currentItem",
            },
          },
          "components": [
            {
              "attributes": {
                "id": "cmp-coll-item-child-UP",
              },
              "name": {
                "collectionId": "my_collection",
                "path": "user",
                "type": "data-variable",
                "variableType": "currentIndex",
              },
              "type": "default",
            },
          ],
          "custom_prop": {
            "collectionId": "my_collection",
            "path": "user",
            "type": "data-variable",
            "variableType": "currentIndex",
          },
          "name": {
            "collectionId": "my_collection",
            "path": "user",
            "type": "data-variable",
            "variableType": "currentItem",
          },
          "property_trait": {
            "collectionId": "my_collection",
            "path": "user",
            "type": "data-variable",
            "variableType": "currentItem",
          },
          "type": "default",
        },
      ],
      "type": "data-collection-item",
    },
  ],
  "dataResolver": {
    "collectionId": "my_collection",
    "dataSource": {
      "path": "my_data_source_id",
      "type": "data-variable",
    },
    "endIndex": 1,
    "startIndex": 0,
  },
  "type": "data-collection",
}
`;

exports[`Collection component Serialization Saving: Collection with no grandchildren 1`] = `
{
  "attributes": {
    "id": "cmp-coll",
  },
  "components": [
    {
      "attributes": {
        "id": "cmp-coll-item",
      },
      "components": [
        {
          "attributes": {
            "attribute_trait": {
              "collectionId": "my_collection",
              "path": "user",
              "type": "data-variable",
              "variableType": "currentItem",
            },
            "id": "cmp-coll-item-child-1",
            "name": {
              "collectionId": "my_collection",
              "path": "user",
              "type": "data-variable",
              "variableType": "currentItem",
            },
          },
          "components": [
            {
              "attributes": {
                "attribute_trait": {
                  "collectionId": "my_collection",
                  "path": "user",
                  "type": "data-variable",
                  "variableType": "currentItem",
                },
                "id": "cmp-coll-item-child-1-1",
                "name": {
                  "collectionId": "my_collection",
                  "path": "user",
                  "type": "data-variable",
                  "variableType": "currentItem",
                },
              },
              "custom_prop": {
                "collectionId": "my_collection",
                "path": "user",
                "type": "data-variable",
                "variableType": "currentIndex",
              },
              "name": {
                "collectionId": "my_collection",
                "path": "user",
                "type": "data-variable",
                "variableType": "currentItem",
              },
              "property_trait": {
                "collectionId": "my_collection",
                "path": "user",
                "type": "data-variable",
                "variableType": "currentItem",
              },
              "type": "default",
            },
            {
              "attributes": {
                "attribute_trait": {
                  "collectionId": "my_collection",
                  "path": "user",
                  "type": "data-variable",
                  "variableType": "currentItem",
                },
                "id": "cmp-coll-item-child-1-2",
                "name": {
                  "collectionId": "my_collection",
                  "path": "user",
                  "type": "data-variable",
                  "variableType": "currentItem",
                },
              },
              "custom_prop": {
                "collectionId": "my_collection",
                "path": "user",
                "type": "data-variable",
                "variableType": "currentIndex",
              },
              "name": {
                "collectionId": "my_collection",
                "path": "user",
                "type": "data-variable",
                "variableType": "currentItem",
              },
              "property_trait": {
                "collectionId": "my_collection",
                "path": "user",
                "type": "data-variable",
                "variableType": "currentItem",
              },
              "type": "default",
            },
          ],
          "custom_prop": {
            "collectionId": "my_collection",
            "path": "user",
            "type": "data-variable",
            "variableType": "currentIndex",
          },
          "name": {
            "collectionId": "my_collection",
            "path": "user",
            "type": "data-variable",
            "variableType": "currentItem",
          },
          "property_trait": {
            "collectionId": "my_collection",
            "path": "user",
            "type": "data-variable",
            "variableType": "currentItem",
          },
          "type": "default",
        },
      ],
      "type": "data-collection-item",
    },
  ],
  "dataResolver": {
    "collectionId": "my_collection",
    "dataSource": {
      "path": "my_data_source_id",
      "type": "data-variable",
    },
    "endIndex": 1,
    "startIndex": 0,
  },
  "type": "data-collection",
}
`;

exports[`Collection component Serialization Serializion with Collection Variables to JSON: Collection with grandchildren 1`] = `
{
  "attributes": {
    "id": "cmp-coll",
  },
  "components": [
    {
      "attributes": {
        "id": "cmp-coll-item",
      },
      "components": [
        {
          "attributes": {
            "attribute_trait": {
              "collectionId": "my_collection",
              "path": "user",
              "type": "data-variable",
              "variableType": "currentItem",
            },
            "id": "cmp-coll-item-child-1",
            "name": {
              "collectionId": "my_collection",
              "path": "user",
              "type": "data-variable",
              "variableType": "currentItem",
            },
          },
          "components": [
            {
              "attributes": {
                "attribute_trait": {
                  "collectionId": "my_collection",
                  "path": "user",
                  "type": "data-variable",
                  "variableType": "currentItem",
                },
                "id": "cmp-coll-item-child-1-1",
                "name": {
                  "collectionId": "my_collection",
                  "path": "user",
                  "type": "data-variable",
                  "variableType": "currentItem",
                },
              },
              "components": [
                {
                  "attributes": {
                    "id": "cmp-coll-item-child-UP",
                  },
                  "name": {
                    "collectionId": "my_collection",
                    "path": "user",
                    "type": "data-variable",
                    "variableType": "currentIndex",
                  },
                  "type": "default",
                },
              ],
              "custom_prop": {
                "collectionId": "my_collection",
                "path": "user",
                "type": "data-variable",
                "variableType": "currentIndex",
              },
              "name": {
                "collectionId": "my_collection",
                "path": "user",
                "type": "data-variable",
                "variableType": "currentItem",
              },
              "property_trait": {
                "collectionId": "my_collection",
                "path": "user",
                "type": "data-variable",
                "variableType": "currentItem",
              },
              "type": "default",
            },
            {
              "attributes": {
                "attribute_trait": {
                  "collectionId": "my_collection",
                  "path": "user",
                  "type": "data-variable",
                  "variableType": "currentItem",
                },
                "id": "cmp-coll-item-child-1-2",
                "name": {
                  "collectionId": "my_collection",
                  "path": "user",
                  "type": "data-variable",
                  "variableType": "currentItem",
                },
              },
              "custom_prop": {
                "collectionId": "my_collection",
                "path": "user",
                "type": "data-variable",
                "variableType": "currentIndex",
              },
              "name": {
                "collectionId": "my_collection",
                "path": "user",
                "type": "data-variable",
                "variableType": "currentItem",
              },
              "property_trait": {
                "collectionId": "my_collection",
                "path": "user",
                "type": "data-variable",
                "variableType": "currentItem",
              },
              "type": "default",
            },
          ],
          "custom_prop": {
            "collectionId": "my_collection",
            "path": "user",
            "type": "data-variable",
            "variableType": "currentIndex",
          },
          "name": {
            "collectionId": "my_collection",
            "path": "user",
            "type": "data-variable",
            "variableType": "currentItem",
          },
          "property_trait": {
            "collectionId": "my_collection",
            "path": "user",
            "type": "data-variable",
            "variableType": "currentItem",
          },
          "type": "default",
        },
      ],
      "type": "data-collection-item",
    },
  ],
  "dataResolver": {
    "collectionId": "my_collection",
    "dataSource": {
      "path": "my_data_source_id",
      "type": "data-variable",
    },
    "endIndex": 1,
    "startIndex": 0,
  },
  "type": "data-collection",
}
`;

exports[`Collection component Serialization Serializion with Collection Variables to JSON: Collection with no grandchildren 1`] = `
{
  "attributes": {
    "id": "cmp-coll",
  },
  "components": [
    {
      "attributes": {
        "id": "cmp-coll-item",
      },
      "components": [
        {
          "attributes": {
            "attribute_trait": {
              "collectionId": "my_collection",
              "path": "user",
              "type": "data-variable",
              "variableType": "currentItem",
            },
            "id": "cmp-coll-item-child-1",
            "name": {
              "collectionId": "my_collection",
              "path": "user",
              "type": "data-variable",
              "variableType": "currentItem",
            },
          },
          "components": [
            {
              "attributes": {
                "attribute_trait": {
                  "collectionId": "my_collection",
                  "path": "user",
                  "type": "data-variable",
                  "variableType": "currentItem",
                },
                "id": "cmp-coll-item-child-1-1",
                "name": {
                  "collectionId": "my_collection",
                  "path": "user",
                  "type": "data-variable",
                  "variableType": "currentItem",
                },
              },
              "custom_prop": {
                "collectionId": "my_collection",
                "path": "user",
                "type": "data-variable",
                "variableType": "currentIndex",
              },
              "name": {
                "collectionId": "my_collection",
                "path": "user",
                "type": "data-variable",
                "variableType": "currentItem",
              },
              "property_trait": {
                "collectionId": "my_collection",
                "path": "user",
                "type": "data-variable",
                "variableType": "currentItem",
              },
              "type": "default",
            },
            {
              "attributes": {
                "attribute_trait": {
                  "collectionId": "my_collection",
                  "path": "user",
                  "type": "data-variable",
                  "variableType": "currentItem",
                },
                "id": "cmp-coll-item-child-1-2",
                "name": {
                  "collectionId": "my_collection",
                  "path": "user",
                  "type": "data-variable",
                  "variableType": "currentItem",
                },
              },
              "custom_prop": {
                "collectionId": "my_collection",
                "path": "user",
                "type": "data-variable",
                "variableType": "currentIndex",
              },
              "name": {
                "collectionId": "my_collection",
                "path": "user",
                "type": "data-variable",
                "variableType": "currentItem",
              },
              "property_trait": {
                "collectionId": "my_collection",
                "path": "user",
                "type": "data-variable",
                "variableType": "currentItem",
              },
              "type": "default",
            },
          ],
          "custom_prop": {
            "collectionId": "my_collection",
            "path": "user",
            "type": "data-variable",
            "variableType": "currentIndex",
          },
          "name": {
            "collectionId": "my_collection",
            "path": "user",
            "type": "data-variable",
            "variableType": "currentItem",
          },
          "property_trait": {
            "collectionId": "my_collection",
            "path": "user",
            "type": "data-variable",
            "variableType": "currentItem",
          },
          "type": "default",
        },
      ],
      "type": "data-collection-item",
    },
  ],
  "dataResolver": {
    "collectionId": "my_collection",
    "dataSource": {
      "path": "my_data_source_id",
      "type": "data-variable",
    },
    "endIndex": 1,
    "startIndex": 0,
  },
  "type": "data-collection",
}
`;
